# ingestion_engine

./: 1.py  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/models/: __init__.py  scraped_page.py
app/services/: database.py  scraper.py
