[project]
name = "ingestion_project"
version = "0.1.0"
description = "FastAPI scraper service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]
dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.20",
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "pydantic-settings>=2.0",
  "psycopg[binary]>=3.3.4",
  "SQLAlchemy>=2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
